<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TarefaActivity">

    <EditText
        android:id="@+id/edit_descricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/tarefa_descricao"
        android:inputType="text"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/tarefa_data"
        android:inputType="date"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="@id/edit_descricao"
        app:layout_constraintEnd_toEndOf="@id/edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/edit_descricao" />

    <TextView
        android:id="@+id/text_prioridade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/text_prioridade"
        app:layout_constraintStart_toStartOf="@id/edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/edit_data" />

    <Spinner
        android:id="@+id/spiner_prioridades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/text_prioridade"/>

    <CheckBox android:id="@+id/checkbox_ligacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/checkbox_ligacao"
        app:layout_constraintStart_toStartOf="@id/edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/spiner_prioridades"
        android:onClick="onCheckboxClicked"/>

    <EditText
        android:id="@+id/edit_fone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_ligacao"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="@id/edit_descricao"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_ligacao" />

    <!--<Button
        android:id="@+id/button_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_remover"
        app:layout_constraintTop_toBottomOf="@id/edit_fone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_salvar"/>-->

    <Button
        android:id="@+id/button_salvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btn_salvar"
        app:layout_constraintTop_toBottomOf="@id/edit_fone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>